--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>산리오코리아 Sanrio Korea</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div></div>
-    <div></div>
+    <header>
+        <div id="logo"><a href="#"><img src="/img/logo_2023.png" alt="로고 이미지"></a></div>
+
+        <nav>
+            <ul>
+                <li><a href="#">COMPANY</a></li>
+                <li><a href="#">CHARACTER</a></li>
+                <li><a href="#">PLACE</a></li>
+                <li><a href="#">RECRUIT</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="slider">
+        <img src="/img/content.png" alt="슬라이드 이미지">
+    </section>
+
+    <section id="character">
+        <h1>CHARACTER</h1>
+        <div class="click"><a href="#">VIEW MORE</a></div>
+
+        <article>
+            <div id="char" class="char01"></div>
+            <div id="char" class="char02"></div>
+            <div id="char" class="char03"></div>
+            <div id="char" class="char04"></div>
+            <div id="char" class="char05"></div>
+            <div id="char" class="char06"></div>
+            <div id="char" class="char07"></div>
+            <div id="char" class="char08"></div>
+        </article>
+    </section>
 </body>
 </html>
