--- a/index.html
+++ b/index.html
@@ -29,14 +29,78 @@
         <div class="click"><a href="#">VIEW MORE</a></div>
 
         <article>
-            <div id="char" class="char01"></div>
-            <div id="char" class="char02"></div>
-            <div id="char" class="char03"></div>
-            <div id="char" class="char04"></div>
-            <div id="char" class="char05"></div>
-            <div id="char" class="char06"></div>
-            <div id="char" class="char07"></div>
-            <div id="char" class="char08"></div>
+            <div>
+                <div class="img">
+                    <img src="./img/new_main_crt1.png" alt="헬로키티">
+                </div>
+                <div class="text">
+                    <h1>헬로키티</h1>
+                    <span>HELLO KITTY</span>
+                </div>
+            </div>
+            <div>
+                <div class="img">
+                    <img src="./img/new_main_crt2.png" alt="마이멜로디">
+                </div>
+                <div class="text">
+                    <h1>마이멜로디</h1>
+                    <span>MY MELODY</span>
+                </div>
+            </div>
+            <div>
+                <div class="img">
+                    <img src="./img/new_main_crt3.png" alt="쿠로미">
+                </div>
+                <div class="text">
+                    <h1>쿠로미</h1>
+                    <span>KUROMI</span>
+                </div>
+            </div>
+            <div>
+                <div class="img">
+                    <img src="./img/new_main_crt4.png" alt="폼폼푸린">
+                </div>
+                <div class="text">
+                    <h1>폼폼푸린</h1>
+                    <span>POMPOMPURIN</span>
+                </div>
+            </div>
+            <div id="char2">
+                <div class="img">
+                    <img src="./img/new_main_crt5.png" alt="시나모롤">
+                </div>
+                <div class="text">
+                    <h1>시나모롤</h1>
+                    <span>CINNAMOROLL</span>
+                </div>
+            </div>
+            <div id="char2">
+                <div class="img">
+                    <img src="./img/new_main_crt6.png" alt="리틀트윈스타">
+                </div>
+                <div class="text">
+                    <h1>리틀트윈스타</h1>
+                    <span>LittleTwinStars</span>
+                </div>
+            </div>
+            <div id="char2">
+                <div class="img">
+                    <img src="./img/new_main_crt7.png" alt="포차코">
+                </div>
+                <div class="text">
+                    <h1>포차코</h1>
+                    <span>POCHACCO</span>
+                </div>
+            </div>
+            <div id="char2">
+                <div class="img">
+                    <img src="./img/new_main_crt8.png" alt="케로케로케로피">
+                </div>
+                <div class="text">
+                    <h1>케로케로케로피</h1>
+                    <span>KEROKEROKEROPPI</span>
+                </div>
+            </div>
         </article>
     </section>
 </body>
